--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/gameConstants.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/powerups/", "res://assets/ParallaxBackground/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/player.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/powerups/", "res://scenes/", "res://scenes/powerups/", "res://assets/ParallaxBackground/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/powerups/power_up_spawner.tscn", "res://scenes/powerups/oilspill_powerup.tscn", "res://scenes/powerups/oilspill.tscn", "res://scenes/main_menu.tscn", "res://chunks/chunk_11.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/game.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn", "res://scenes/powerups/oilspill.tscn", "res://scenes/main_menu.tscn", "res://chunks/chunk_11.tscn", "res://scenes/game.tscn", "res://scenes/powerups/dash.tscn")
+current_scene="res://scenes/powerups/oilspill.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/multiplayer/multiplayer_controller.gd"]
+selected_script="res://scripts/multiplayer/multiplayer_controller.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
