--- a/bolt_away/.godot/editor/script_editor_cache.cfg
+++ b/bolt_away/.godot/editor/script_editor_cache.cfg
@@ -76,8 +76,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 111,
-"scroll_position": 111.0,
+"row": 129,
+"scroll_position": 129.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -227,11 +227,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 3.0,
+"row": 9,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -260,6 +260,20 @@ state={
 "h_scroll_position": 0,
 "row": 7,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/mushroom_bumper.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
