--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn", "res://scenes/powerups/oilspill.tscn", "res://scenes/main_menu.tscn", "res://chunks/chunk_11.tscn", "res://scenes/game.tscn", "res://scenes/powerups/dash.tscn")
-current_scene="res://scenes/powerups/oilspill.tscn"
+current_scene="res://scenes/game.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/multiplayer/multiplayer_controller.gd"]
-selected_script="res://scripts/multiplayer/multiplayer_controller.gd"
+open_scripts=["res://scripts/chunk.gd", "res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
+selected_script="res://scripts/multiplayer/multiplayer_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
