--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn", "res://scenes/powerups/oilspill.tscn", "res://scenes/main_menu.tscn", "res://chunks/chunk_11.tscn", "res://scenes/game.tscn", "res://scenes/powerups/dash.tscn")
-current_scene="res://scenes/game.tscn"
+current_scene="res://scenes/multiplayer_player.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
