--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -9,34 +9,34 @@ dock_closed=[]
 dock_split_2=-1
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=376
+dock_hsplit_3=-346
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/tutorial_buttons.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://chunks/chunk1.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/powerups/", "res://scenes/", "res://chunks/", "res://assets/powerups (placeholders)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/tutorial_buttons.tscn", "res://scenes/main_menu.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://chunks/chunk21.tscn", "res://chunks/chunk22.tscn", "res://scenes/death_wall.tscn", "res://chunks/chunk1.tscn")
+current_scene="res://chunks/chunk1.tscn"
 center_split_offset=-252
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/main_menu.gd", "res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
-selected_script="res://scripts/multiplayer/multiplayer_controller.gd"
-open_help=["EditorInterface", "ScriptLanguageExtension"]
+open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/main_menu.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/powerups/oilspill.gd", "res://scripts/platform.gd", "res://scripts/player.gd", "res://scripts/powerups/powerup.gd", "res://scripts/powerups/powerup_spawner.gd", "res://scripts/WALLtransient_platform.gd"]
+selected_script="res://scripts/game_manager.gd"
+open_help=["EditorInterface", "ScriptLanguageExtension", "TileMapLayer"]
 script_split_offset=140
 list_split_offset=0
 zoom_factor=1.0
