--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -17,26 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://chunks/chunk_11.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://chunks/", "res://assets/", "res://assets/powerups (placeholders)/", "res://assets/ParallaxBackground/", "res://assets/overlays/", "res://assets/fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_scene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://webrtc/", "res://scripts/", "res://scenes/", "res://chunks/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/transient_platform.tscn")
-current_scene="res://scenes/transient_platform.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/transient_platform.tscn", "res://chunks/chunk22.tscn", "res://chunks/chunk_11.tscn", "res://chunks/chunk21.tscn", "res://scenes/death_wall.tscn", "res://scenes/desert_spikes.tscn", "res://scenes/end_pop_up.tscn", "res://scenes/one_way_block.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/player_character.tscn", "res://scenes/main_menu.tscn", "res://scenes/lobby_menu.tscn", "res://scenes/game_scene.tscn")
+current_scene="res://scenes/game_scene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main/main.gd"]
-selected_script="res://main/main.gd"
-open_help=[]
+open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/death_wall.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://main/main.gd", "res://scripts/point.gd", "res://scripts/pop_up.gd"]
+selected_script="res://scripts/game_scene.gd"
+open_help=["PackedScene"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
