--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -25,17 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://chunks/chunk21.tscn", "res://chunks/chunk22.tscn", "res://scenes/death_wall.tscn", "res://chunks/chunk1.tscn")
-current_scene="res://chunks/chunk1.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/main_menu.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/powerups/oilspill.gd", "res://scripts/platform.gd", "res://scripts/player.gd", "res://scripts/powerups/powerup.gd", "res://scripts/powerups/powerup_spawner.gd", "res://scripts/WALLtransient_platform.gd"]
-selected_script="res://scripts/game_manager.gd"
+selected_script="res://scripts/chunk.gd"
 open_help=["EditorInterface", "ScriptLanguageExtension", "TileMapLayer"]
 script_split_offset=140
 list_split_offset=0
