--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -25,11 +25,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/transient_platform.tscn", "res://chunks/chunk22.tscn", "res://chunks/chunk_11.tscn", "res://chunks/chunk21.tscn", "res://scenes/death_wall.tscn", "res://scenes/desert_spikes.tscn", "res://scenes/end_pop_up.tscn", "res://scenes/one_way_block.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/player_character.tscn", "res://scenes/main_menu.tscn", "res://scenes/lobby_menu.tscn", "res://scenes/game_scene.tscn")
-current_scene="res://scenes/game_scene.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn")
+current_scene="res://main/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
