--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player_character.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/enemy.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/sprite_sheets/", "res://ai/", "res://ai/trees/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn")
-current_scene="res://main/main.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn", "res://chunks/swamp_chunk1.tscn", "res://chunks/chunk_11.tscn", "res://scenes/test_level.tscn", "res://scenes/enemy.tscn", "res://scenes/player_character.tscn", "res://chunks/starting_chunk.tscn")
+current_scene="res://chunks/starting_chunk.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=4
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/main_menu.gd"]
+selected_script="res://scripts/main_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -47,3 +47,23 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[LimboAI]
+
+bteditor_open_bts=["res://ai/trees/enemy.tres"]
+bteditor_hsplit=-320
+debugger_update_interval_msec=0.0
+task_palette_collapsed_sections=[]
+task_palette_type_filter=0
+task_palette_category_filter=0
+task_palette_excluded_categories=[]
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
