--- a/super_smash_bolt_ultimate/client/.godot/scene_groups_cache.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/scene_groups_cache.cfg
@@ -1,6 +1,18 @@
+[res://demo/agents/player/player.tscn]
+
+groups=[&"player"]
+
+[res://demo/props/dummy.tscn]
+
+groups=[&"player"]
+
 [res://scenes/test_player_character.tscn]
 
 groups=[&"Players"]
+
+[res://scenes/enemy.tscn]
+
+groups=[&"Enemy"]
 
 [res://scenes/player_character.tscn]
 
