--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -9,33 +9,33 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=482
+dock_hsplit_3=-694
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player_character.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/end_pop_up.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn")
-current_scene="res://main/main.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=1
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/spectator_overlay.tscn", "res://scenes/pause_menu.tscn", "res://scenes/game_scene.tscn", "res://scenes/end_pop_up.tscn")
+current_scene="res://scenes/end_pop_up.tscn"
+center_split_offset=-491
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/main_menu.gd", "res://scripts/pause_menu.gd", "res://scripts/spectator_overlay.gd"]
+selected_script="res://scripts/pause_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
