--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/transient_wall.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/player_character.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/test_level.tscn", "res://scenes/transient_platform.tscn")
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/test_level.tscn", "res://scenes/transient_wall.tscn", "res://scenes/test_player_character.tscn", "res://scenes/player_character.tscn")
 current_scene="res://scenes/test_level.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/test_player_character_script.gd"]
-selected_script="res://scripts/test_player_character_script.gd"
-open_help=[]
+open_scripts=["res://scripts/test_player_character_script.gd", "res://scripts/WALLtransient_platform.gd"]
+selected_script="res://scripts/WALLtransient_platform.gd"
+open_help=["Area2D", "CharacterBody2D", "CollisionObject2D", "CollisionShape2D", "PhysicsBody2D", "RigidBody2D"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
