--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/tutorial_buttons.tscn", "res://scenes/main_menu.tscn")
-current_scene="res://scenes/game.tscn"
+current_scene="res://scenes/tutorial_buttons.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
