--- a/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
@@ -92,30 +92,76 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 184,
+"row": 185,
+"scroll_position": 176.0,
+"selection": true,
+"selection_from_column": 49,
+"selection_from_line": 183,
+"selection_to_column": 38,
+"selection_to_line": 185,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/player_character.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 6,
+"folded_lines": Array[int]([282]),
+"h_scroll_position": 0,
+"row": 87,
+"scroll_position": 240.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/transient_wall.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 27.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/transient_platform.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 49,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/WALLtransient_platform.gd]
+[res://scripts/chunk.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 77,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 21.0,
+"row": 16,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/player_character.gd]
+[res://scripts/powerups/powerup_spawner.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -125,6 +171,20 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/end_game_pop_up.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
