--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/powerups/powerup_hud.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/player_character.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/powerups/", "res://assets/sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -34,12 +34,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/death_wall.gd", "res://scripts/end_game_pop_up.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/in_lobby_menu.gd", "res://scripts/lobby_menu.gd", "res://main/main.gd", "res://scripts/main_menu.gd", "res://scripts/player_character.gd", "res://scripts/powerups/powerup_hud.gd", "res://scripts/powerups/powerup_manager.gd", "res://scripts/spectator_overlay.gd", "res://scripts/ui.gd", "res://main/user.gd"]
-selected_script="res://scripts/powerups/powerup_manager.gd"
+open_scripts=["res://scripts/death_wall.gd", "res://scripts/end_game_pop_up.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/in_lobby_menu.gd", "res://scripts/lobby_menu.gd", "res://main/main.gd", "res://scripts/main_menu.gd", "res://scripts/player.gd", "res://scripts/player_character.gd", "res://scripts/powerups/powerup_hud.gd", "res://scripts/powerups/powerup_manager.gd", "res://scripts/spectator_overlay.gd", "res://scripts/ui.gd", "res://main/user.gd"]
+selected_script="res://scripts/player_character.gd"
 open_help=["CanvasItem", "Control", "InputEventPanGesture", "ProgressBar", "Range", "TextureProgressBar", "Timer"]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.21429
+zoom_factor=1.0
 
 [ShaderEditor]
 
